--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,45 @@
 <html>
   <head>
     <title>Jovian Careers</title>
+    <style>
+      h1 {
+        font-size:40px;
+        font-family:Robot;
+        font-weight:normal;
+        color:rgb(180,180,180);
+        text-align:center;
+      }
+
+      .bodytext {
+        font-family:Roboto;
+        color:rgb(80,80,80);
+      }
+
+      #banner {
+        width:100%;
+        height:360px;
+        object-fit:cover;
+      }
+
+      #container {
+        max-width:720px;
+        margin:0 auto 0 auto;
+      }
+    </style>
   </head>
   <body>
-    Hello there, you'll learn about the job openings at Jovian here.
+    <div id="container">
+    <h1>Jovian Careers</h1>
+    <image id="banner" src="https://careers-website--williamzhang76.repl.co/static/banner.jpg">
+    <p class="bodytext">Lorem ipsum dolor sit amet, consectetur 
+adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet. Volutpat odio facilisis mauris sit amet massa vitae. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse faucibus. At erat pellentesque adipiscing commodo elit at. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Nibh mauris cursus mattis molestie a. Urna condimentum mattis pellentesque id nibh tortor id aliquet. Consequat nisl vel pretium lectus quam id. Scelerisque felis imperdiet proin fermentum leo vel orci porta non. Varius duis at consectetur lorem donec massa sapien faucibus et. </p>
+     <h2>Open Positions</h2>
+        <p class="bodytext">Todo--- show the jobs here
+        </p>
+      <div style='text-align:center'>
+        <button>Contact us</button>
+        <p>Copyright 2023 Jovian</p>
+      </div>  
+    </div>  
   </body>
 </html>
