--- a/templates/home.html
+++ b/templates/home.html
@@ -2,44 +2,34 @@
 <html>
   <head>
     <title>Jovian Careers</title>
-    <style>
-      h1 {
-        font-size:40px;
-        font-family:Robot;
-        font-weight:normal;
-        color:rgb(180,180,180);
-        text-align:center;
-      }
-
-      .bodytext {
-        font-family:Roboto;
-        color:rgb(80,80,80);
-      }
-
-      #banner {
-        width:100%;
-        height:360px;
-        object-fit:cover;
-      }
-
-      #container {
-        max-width:720px;
-        margin:0 auto 0 auto;
-      }
-    </style>
+     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-  
+          scale=1, shrink-to-fit=no">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+     <style>
+       #banner {
+         height:360px;
+         width:100%;
+         
+       }
+     </style>    
   </head>
   <body>
-    <div id="container">
-    <h1>Jovian Careers</h1>
-    <image id="banner" src="https://careers-website--williamzhang76.repl.co/static/banner.jpg">
-    <p class="bodytext">Lorem ipsum dolor sit amet, consectetur 
+    <div class="container">
+    <h1 class="text-center mt-2 mb-4">{{ company_name}} Careers</h1>
+    <image class="img-fluid" id="banner" src="https://careers-website--williamzhang76.repl.co/static/banner.jpg">
+    <h2 class="text-center mt-2 mb-4">About Jovian</h2> 
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur 
 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet. Volutpat odio facilisis mauris sit amet massa vitae. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse faucibus. At erat pellentesque adipiscing commodo elit at. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Nibh mauris cursus mattis molestie a. Urna condimentum mattis pellentesque id nibh tortor id aliquet. Consequat nisl vel pretium lectus quam id. Scelerisque felis imperdiet proin fermentum leo vel orci porta non. Varius duis at consectetur lorem donec massa sapien faucibus et. </p>
-     <h2>Open Positions</h2>
-        <p class="bodytext">Todo--- show the jobs here
+     <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+        <p>
+          {% for job in jobs%}
+            {% include 'jobitem.html' %}
+          {% endfor %}
         </p>
-      <div style='text-align:center'>
-        <button>Contact us</button>
-        <p>Copyright 2023 Jovian</p>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg">Contact us</button>
+        <p class="mt-4">Copyright 2023 Jovian</p>
       </div>  
     </div>  
   </body>
