made some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
     <h2 class="text-center mt-2 mb-4">About Jovian</h2> 
     <p class="lead">Lorem ipsum dolor sit amet, consectetur 
 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet. Volutpat odio facilisis mauris sit amet massa vitae. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse faucibus. At erat pellentesque adipiscing commodo elit at. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Nibh mauris cursus mattis molestie a. Urna condimentum mattis pellentesque id nibh tortor id aliquet. Consequat nisl vel pretium lectus quam id. Scelerisque felis imperdiet proin fermentum leo vel orci porta non. Varius duis at consectetur lorem donec massa sapien faucibus et. </p>
-     <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+     <h2 class="text-center mt-2 mb-4">Job Openings</h2>
         <p>
           {% for job in jobs%}
             {% include 'jobitem.html' %}
