--- a/templates/home.html
+++ b/templates/home.html
@@ -10,17 +10,24 @@
        #banner {
          height:360px;
          width:100%;
-         
+         margin-bottom:16px;
        }
      </style>    
   </head>
   <body>
+    {% include 'nav.html' %}
+    <image class="img-fluid" id="banner" src="https://careers-website--williamzhang76.repl.co/static/banner.jpg">
     <div class="container">
     <h1 class="text-center mt-2 mb-4">{{ company_name}} Careers</h1>
-    <image class="img-fluid" id="banner" src="https://careers-website--williamzhang76.repl.co/static/banner.jpg">
-    <h2 class="text-center mt-2 mb-4">About Jovian</h2> 
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur 
+  <div class="row" style="margin-bottom:16px;">    
+    <div class="col-md-6 ">
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur 
 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet. Volutpat odio facilisis mauris sit amet massa vitae. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse faucibus. At erat pellentesque adipiscing commodo elit at. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Nibh mauris cursus mattis molestie a. Urna condimentum mattis pellentesque id nibh tortor id aliquet. Consequat nisl vel pretium lectus quam id. Scelerisque felis imperdiet proin fermentum leo vel orci porta non. Varius duis at consectetur lorem donec massa sapien faucibus et. </p>
+    </div>  
+    <div class="d-none d-md-block col-md-6">
+      <img src="/static/people.jpg" style="height:320px; border-radius:4px;"">
+    </div> 
+   </div>    
      <h2 class="text-center mt-2 mb-4">Job Openings</h2>
         <p>
           {% for job in jobs%}
@@ -28,9 +35,9 @@ adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliq
           {% endfor %}
         </p>
       <div class="text-center">
-        <button class="btn btn-primary btn-lg">Contact us</button>
-        <p class="mt-4">Copyright 2023 Jovian</p>
+        <a href="mailto:zhang_william2003@hotmail.com?subject=Question%20about%20Jovian%3F&body=My%20name%3A%20%3Cyour%20name%20is%20here%3E%0D%0AMy%20question%3A%20%3Cyour%20question%20goes%20here%3E%0D%0A" class="btn btn-primary btn-lg">Contact us</a>
       </div>  
     </div>  
+    {% include "footer.html" %}
   </body>
 </html>
