--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -8,7 +8,7 @@
     {% endif %}
  </div>   
  <div class="col-2"> 
-   <button type="button" class="btn btn-outline-primary">Apply
-   </button>
+   <a href="mailto:zhang_william2003@hotmail.com?subject=Application%20for%20{{job['title']}}&body=My%20name%3A%20%3Cyour%20name%20is%20here%3E%0D%0AMy%20resume%20link%3A%20%3Cyour%20resume%20link%3E%0D%0AMy%20linkedin%20link%3A%20%3Cyour%20linkedin%20link%3E" type="button" class="btn btn-outline-primary">Apply
+   </a>
  </div>  
 </div>
