--- a/templates/home.html
+++ b/templates/home.html
@@ -2,23 +2,13 @@
 <html>
   <head>
     <title>Jovian Careers</title>
-     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-  
-          scale=1, shrink-to-fit=no">
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-     <style>
-       #banner {
-         height:360px;
-         width:100%;
-         margin-bottom:16px;
-       }
-     </style>    
+      {% include 'bootstrap.html' %}
   </head>
   <body>
     {% include 'nav.html' %}
-    <image class="img-fluid" id="banner" src="https://careers-website--williamzhang76.repl.co/static/banner.jpg">
+    {% include 'banner.html' %}
     <div class="container">
-    <h1 class="text-center mt-2 mb-4">{{ company_name}} Careers</h1>
+    <h1 class="text-center mt-2 mb-4">Jovian Careers</h1>
   <div class="row" style="margin-bottom:16px;">    
     <div class="col-md-6 ">
       <p class="lead">Lorem ipsum dolor sit amet, consectetur 
