--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet. Volutpat odio facilisis mauris sit amet massa vitae. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse faucibus. At erat pellentesque adipiscing commodo elit at. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Nibh mauris cursus mattis molestie a. Urna condimentum mattis pellentesque id nibh tortor id aliquet. Consequat nisl vel pretium lectus quam id. Scelerisque felis imperdiet proin fermentum leo vel orci porta non. Varius duis at consectetur lorem donec massa sapien faucibus et. </p>
     </div>  
     <div class="d-none d-md-block col-md-6">
-      <img src="/static/people.jpg" style="height:320px; border-radius:4px;"">
+      <img src="/static/people.jpg" style="height:320px; border-radius:4px;">
     </div> 
    </div>    
      <h2 class="text-center mt-2 mb-4">Job Openings</h2>
